add auth layout

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,12 @@
-<p>auth works!</p>
+<div class="auth" fxLayout="row" fxLayoutGap="20px">
+  <div fxFlex="50%">
+    <div class="auth__image-wrapper">
+      <img class="auth__image" src="https://wallpaperplay.com/walls/full/9/4/c/71749.jpg" alt="Image">
+    </div>
+  </div>
+  <div fxFlex="50%">
+    <div class="auth__content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
