--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -7,48 +7,29 @@
   </mat-card-subtitle>
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <mat-form-field class="input-width" *ngIf="form.get('email') as email">
-        <input
-          matInput
-          formControlName="email"
-          type="email"
-          placeholder="Email"
-        /><mat-error *ngIf="email.invalid && email.touched">
-          <ng-container *ngIf="email.errors['required']">
-            Please enter Email.
-          </ng-container>
-          <ng-container *ngIf="email.errors['email']">
-            Please enter valid Email.
-          </ng-container>
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field class="input-width" *ngIf="form.get('password') as password">
-        <input
-          matInput
-          formControlName="password"
-          type="password"
-          placeholder="Password"
-        /><mat-error *ngIf="password.invalid && password.touched">
-          <ng-container *ngIf="password.errors['required']">
-            Please enter Password.
-          </ng-container>
-          <ng-container *ngIf="password.errors['minlength'] && password.errors['minlength']['requiredLength']">
-            Password should be greater than {{ password.errors['minlength']['requiredLength'] }} symbols.
-            Now is {{ password.errors['minlength']['actualLength'] }}
-          </ng-container>
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field class="input-width" *ngIf="form.get('nickname') as nickname">
-        <input
-          matInput
-          formControlName="nickname"
-          type="text"
-          placeholder="Nickname"
-        /><mat-error *ngIf="nickname.invalid && nickname.touched">
-          Please enter Nickname.
-        </mat-error>
-      </mat-form-field>
-      <button class="mt-5" mat-raised-button color="primary" [disabled]="form.invalid || form.disabled">Signup</button>
+
+      <app-input-box
+        [form]="form"
+        type="email"
+        path="email"
+        placeholder="Email"
+      ></app-input-box>
+
+      <app-input-box
+        [form]="form"
+        type="password"
+        path="password"
+        placeholder="Password"
+      ></app-input-box>
+
+      <app-input-box
+        [form]="form"
+        path="nickname"
+        placeholder="Nickname"
+      ></app-input-box>
+
+      <app-loader *ngIf="loading"></app-loader>
+      <button class="mt-10" mat-raised-button color="primary" [disabled]="form.invalid || form.disabled">Signup</button>
     </form>
   </mat-card-content>
   <p>Back to <a routerLink="/login">login</a></p>
