--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -1,3 +1,14 @@
-button {
+.button {
   width: 80%;
+
+  &--google {
+    background: #fff url('./../../../../assets/img/google.svg') no-repeat 50px;
+    background-size: 25px;
+    border: 1px solid #E0E0E0;
+    color: #272727;
+
+    &:hover {
+      background-color: #F3F3F3;
+    }
+  }
 }
