add error handler, create navbar components

--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -12,3 +12,13 @@
     }
   }
 }
+
+a {
+  color: #3F51B5;
+  text-decoration: none;
+
+  &:hover {
+    font-weight: 600;
+    text-decoration: underline;
+  }
+}
