--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<div class="dashboard">
+  <app-navbar></app-navbar>
+  <div class="dashboard__wrapper" fxLayout="row" fxLayoutGap="20px">
+    <div fxFlex="25%" class="dashboard__item">
+      <app-sidebar></app-sidebar>
+    </div>
+  </div>
+</div>
