--- a/src/app/auth/components/register/register.component.scss
+++ b/src/app/auth/components/register/register.component.scss
@@ -1,3 +1,13 @@
 button {
   width: 80%;
 }
+
+a {
+  color: #3F51B5;
+  text-decoration: none;
+
+  &:hover {
+    font-weight: 600;
+    text-decoration: underline;
+  }
+}
