implement editing profile functionality

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -10,6 +10,7 @@
 
       <app-input-box
         [form]="form"
+        width="80%"
         type="email"
         path="email"
         placeholder="Email"
@@ -17,6 +18,7 @@
 
       <app-input-box
         [form]="form"
+        width="80%"
         type="password"
         path="password"
         placeholder="Password"
