--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -10,6 +10,7 @@
 
       <app-input-box
         [form]="form"
+        width="80%"
         type="email"
         path="email"
         placeholder="Email"
@@ -17,6 +18,7 @@
 
       <app-input-box
         [form]="form"
+        width="80%"
         type="password"
         path="password"
         placeholder="Password"
@@ -24,6 +26,7 @@
 
       <app-input-box
         [form]="form"
+        width="80%"
         path="nickname"
         placeholder="Nickname"
       ></app-input-box>
