--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "./app//scss/main.scss";
+@import "./../node_modules/ngx-lightbox/lightbox.css";
 
 body {
   margin: 0;
   padding: 0;
+
+  .lb-data .lb-close {
+    display: none;
+  }
 }
