implement create request functionality

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -27,7 +27,7 @@
       <app-input-box
         [form]="form"
         width="80%"
-        path="nickname"
+        path="displayName"
         placeholder="Nickname"
       ></app-input-box>
 
