--- a/src/app/dashboard/components/profile/profile.component.html
+++ b/src/app/dashboard/components/profile/profile.component.html
@@ -10,7 +10,7 @@
         [autofocus]="true"
         position="center"
         type="text"
-        path="nickname"
+        path="displayName"
         placeholder="Nickname"
       ></app-input-box>
     </form>
