--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,4 +9,8 @@ body {
   .lb-data .lb-close {
     display: none;
   }
+
+  .add-friend .mat-list-item-content {
+    padding: 0 !important;
+  }
 }
