--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -5,13 +5,32 @@
     </mat-expansion-panel-header>
     <app-profile></app-profile>
   </mat-expansion-panel>
-  <mat-expansion-panel expanded="true" *ngIf="showAddFriendsPanel">
+  <mat-expansion-panel (afterExpand)="onLoadUsers()">
     <mat-expansion-panel-header>
       Add Friends
     </mat-expansion-panel-header>
-    <app-add-friend *ngIf="users.length > 0; else loading" [users]="users" (addFriend)="onAddFriend($event)"></app-add-friend>
-    <ng-template #loading>
-      <app-loader></app-loader>
+    <ng-container *ngIf="showAddFriendsPanel; else emptyFriends">
+      <app-add-friend *ngIf="users.length > 0 && !subLoading; else loading" [users]="users" (addFriend)="onAddFriend($event)"></app-add-friend>
+      <ng-template #loading>
+        <app-loader></app-loader>
+      </ng-template>
+    </ng-container>
+    <ng-template #emptyFriends>
+      <span class="empty">Users list is empty!</span>
+    </ng-template>
+  </mat-expansion-panel>
+  <mat-expansion-panel (afterExpand)="onLoadRequests()">
+    <mat-expansion-panel-header>
+      Requests
+    </mat-expansion-panel-header>
+    <ng-container *ngIf="showRequetsPanel; else emptyRequests">
+      <ng-template #loading>
+        <app-loader></app-loader>
+      </ng-template>
+      <app-requests *ngIf="usersByRequests.length > 0 && !subLoading; else loading" [users]="usersByRequests" (acceptRequest)="onAcceptRequest($event)" (declineRequest)="onDeclineRequest($event)"></app-requests>
+    </ng-container>
+    <ng-template #emptyRequests>
+      <span class="empty">You don't have new requests!</span>
     </ng-template>
   </mat-expansion-panel>
 </mat-accordion>
