--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,10 @@ body {
     display: none;
   }
 
-  .add-friend .mat-list-item-content {
-    padding: 0 !important;
+  .add-friend,
+  .requests {
+    .mat-list-item-content {
+      padding: 0 !important;
+    }
   }
 }
