Implement requests functionality (#1)
* implement basic requests functionality

* add friends component

* code improvements

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,14 @@ body {
     display: none;
   }
 
-  .add-friend .mat-list-item-content {
-    padding: 0 !important;
+  .add-friend,
+  .requests {
+    .mat-list-item-content {
+      padding: 0 !important;
+    }
+  }
+
+  .mat-expansion-indicator::after {
+    color: $primary;
   }
 }
