improve panel styles

--- a/src/app/dashboard/components/friends/friends.component.html
+++ b/src/app/dashboard/components/friends/friends.component.html
@@ -1,6 +1,8 @@
-<mat-list>
-  <mat-list-item class="add-friend" *ngFor="let user of users; let idx = index">
-    <img matListAvatar [src]="user.photoURL" alt="" (click)="onImgClick(idx)">
-    <h3 matLine>{{ user.displayName }}</h3>
-  </mat-list-item>
-</mat-list>
+<div class="friends scrollbar">
+  <mat-list class="friends__list">
+    <mat-list-item class="add-friend" *ngFor="let user of users; let idx = index">
+      <img matListAvatar [src]="user.photoURL" alt="" (click)="onImgClick(idx)">
+      <h3 matLine>{{ user.displayName }}</h3>
+    </mat-list-item>
+  </mat-list>
+</div>
