--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -1,7 +1,7 @@
-@import './../scss/variables.scss';
+@import './../scss/variables';
 
 .auth {
-  background: #f7f8fb;
+  background: $grey;
 
   &__image-wrapper {
     overflow: hidden;
