--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
     </ng-template>
   </mat-expansion-panel>
 
-  <mat-expansion-panel (afterExpand)="onLoadUsers()">
+  <mat-expansion-panel class="add-friends-panel" (afterExpand)="onLoadUsers()">
     <mat-expansion-panel-header>
       Add Friends
     </mat-expansion-panel-header>
@@ -26,7 +26,7 @@
     </ng-template>
   </mat-expansion-panel>
 
-  <mat-expansion-panel expanded="true">
+  <mat-expansion-panel class="friends-panel" expanded="true">
     <mat-expansion-panel-header>
       Friends
     </mat-expansion-panel-header>
@@ -43,7 +43,7 @@
     </ng-template>
   </mat-expansion-panel>
 
-  <mat-expansion-panel (afterExpand)="onLoadRequests()">
+  <mat-expansion-panel class="requests-panel" (afterExpand)="onLoadRequests()">
     <mat-expansion-panel-header>
       Requests
     </mat-expansion-panel-header>
