--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,3 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-@import "./app//scss/main.scss";
+@import "./app/scss/main";
 @import "./../node_modules/ngx-lightbox/lightbox.css";
-
-body {
-  margin: 0;
-  padding: 0;
-
-  .lb-data .lb-close {
-    display: none;
-  }
-
-  .add-friend,
-  .requests {
-    .mat-list-item-content {
-      padding: 0 !important;
-    }
-  }
-
-  .mat-expansion-indicator::after {
-    color: $primary;
-  }
-}
