--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -14,8 +14,13 @@
       Add Friends
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
+      <app-live-search (searchUser)="onInputUser($event)"></app-live-search>
       <ng-container *ngIf="showAddFriendsPanel; else emptyUsers">
-        <app-add-friend *ngIf="users.length > 0 && !subLoading; else loading" [users]="users" (addFriend)="onAddFriend($event)"></app-add-friend>
+        <app-add-friend
+          *ngIf="users.length && !subLoading; else loading"
+          [users]="users"
+          (addFriend)="onAddFriend($event)"
+        ></app-add-friend>
         <ng-template #loading>
           <app-loader></app-loader>
         </ng-template>
