--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -26,7 +26,7 @@
         </ng-template>
       </ng-container>
       <ng-template #emptyUsers>
-        <span class="empty">Users list is empty!</span>
+        <div class="empty">Users list is empty!</div>
       </ng-template>
     </ng-template>
   </mat-expansion-panel>
