create user-actions module

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <app-navbar></app-navbar>
   <div class="dashboard__wrapper" fxLayout="row" fxLayoutGap="20px">
     <div fxFlex="25%" class="dashboard__item">
-      <app-sidebar></app-sidebar>
+      <app-user-actions></app-user-actions>
     </div>
   </div>
 </div>
