--- a/src/app/dashboard/user-actions/user-actions.component.html
+++ b/src/app/dashboard/user-actions/user-actions.component.html
@@ -37,13 +37,13 @@
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
       <ng-container *ngIf="showFriendsPanel; else emptyFriends">
-        <app-friends *ngIf="friends.length > 0; else loading" [users]="friends"></app-friends>
+        <app-friends *ngIf="friends.length > 0; else loading" (selectFriend)="onSelectFriend($event)" [users]="friends"></app-friends>
         <ng-template #loading>
           <app-loader></app-loader>
         </ng-template>
       </ng-container>
       <ng-template #emptyFriends>
-        <span class="empty">Friends list is empty!</span>
+        <span class="ml-24 empty">Friends list is empty!</span>
       </ng-template>
     </ng-template>
   </mat-expansion-panel>
