improve chat styles

--- a/src/app/dashboard/chat/chat.component.scss
+++ b/src/app/dashboard/chat/chat.component.scss
@@ -1,23 +1,33 @@
 @import './../../scss/variables';
 
 .chat {
+  align-items: center;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+  display: flex;
+  justify-content: center;
+  height: calc(100vh - 100px);
+  position: fixed;
+  width: 50%;
 
-  &__background {
-    align-items: center;
+  &--empty {
     background-attachment: scroll;
     background-image: url('./../../../assets/img/chat.jpg');
     background-size: cover;
-    border-radius: 4px;
-    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
-    display: flex;
-    justify-content: center;
-    height: 100%;
-
-    &__title {
-      color: $primary;
-      font-weight: 700;
-      padding: 15px;
-    }
-
   }
+
+  &__title {
+    color: $primary;
+    font-weight: 700;
+    padding: 15px;
+  }
+
+  app-textbox {
+    align-self: flex-end;
+    margin-bottom: 10px;
+    padding: 0 15px;
+    width: 100%;
+  }
+
 }
