--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -1,11 +1,10 @@
-<ng-container *ngIf="user; else background">
-  <app-textbox (sendMessage)="onSendMessage($event)"></app-textbox>
-</ng-container>
-
-<ng-template #background>
-  <div class="chat__background">
-    <div class="chat__background__title">
+<div class="chat" [class.chat--empty]="!user">
+  <ng-container *ngIf="user; else empty">
+    <app-textbox (sendMessage)="onSendMessage($event)"></app-textbox>
+  </ng-container>
+  <ng-template #empty>
+    <div class="chat__title">
       Please select a chat to start messaging
     </div>
-  </div>
-</ng-template>
+  </ng-template>
+</div>
