--- a/src/app/dashboard/chat/components/textbox/textbox.component.scss
+++ b/src/app/dashboard/chat/components/textbox/textbox.component.scss
@@ -1,3 +1,5 @@
+@import './../../../../scss/variables';
+
 .textbox {
   align-items: center;
   display: flex;
@@ -7,4 +9,14 @@
     width: 100%;
   }
 
+  mat-hint {
+    &.red {
+      color: $danger;
+    }
+  }
+}
+
+mat-divider {
+  border-top-color: darken($grey, 20);
+  margin: 0 15px 10px;
 }
