--- a/src/app/dashboard/user-actions/components/add-friend/add-friend.component.html
+++ b/src/app/dashboard/user-actions/components/add-friend/add-friend.component.html
@@ -1,6 +1,6 @@
 <mat-list>
   <mat-list-item class="add-friend" *ngFor="let user of users; let idx = index">
-    <img matListAvatar [src]="user.photoURL" alt="" (click)="onImgClick(idx)">
+    <img matListAvatar [src]="user.photoURL" alt="" (click)="onImgClick(user)">
     <h3 matLine>{{ user.displayName }}</h3>
     <p matLine *ngIf="user.receiver">Requested</p>
     <p matLine *ngIf="user.sender">sent you request</p>
