fix issue with text enter

--- a/src/app/dashboard/chat/components/textbox/textbox.component.html
+++ b/src/app/dashboard/chat/components/textbox/textbox.component.html
@@ -8,7 +8,7 @@
     <textarea
       [maxlength]="maxLength"
       class="scrollbar"
-      (keyup.enter)="onSendMessage()"
+      (keyDown.enter)="onSendMessage($event)"
       [(ngModel)]="message"
       matInput
       cdkTextareaAutosize
