--- a/src/app/dashboard/chat/chat.component.scss
+++ b/src/app/dashboard/chat/chat.component.scss
@@ -6,7 +6,8 @@
   border-radius: 4px;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   height: calc(100vh - 100px);
   position: fixed;
   width: 50%;
@@ -15,6 +16,7 @@
     background-attachment: scroll;
     background-image: url('./../../../assets/img/chat.jpg');
     background-size: cover;
+    justify-content: center;
   }
 
   &__title {
@@ -23,11 +25,18 @@
     padding: 15px;
   }
 
+  &__user {
+    color: $primary;
+    font-size: 1.2em;
+    font-weight: 700;
+    margin-top: 10px;
+    text-align: center;
+    width: 90%;
+  }
+
   app-textbox {
-    align-self: flex-end;
     margin-bottom: 10px;
-    padding: 0 15px;
-    width: 100%;
+    width: 90%;
   }
 
 }
