--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,6 @@
 <div class="auth" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="center center">
   <div fxFlex="50%" class="auth__image-wrapper">
-    <img class="auth__image" src="https://wallpaperplay.com/walls/full/9/4/c/71749.jpg" alt="Image">
+    <img class="auth__image" src="assets/img/auth.jpg" alt="Image">
   </div>
   <div class="auth__content">
     <router-outlet></router-outlet>
