--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -1,9 +1,16 @@
-<div class="chat" [class.chat--empty]="!user">
+<div class="chat" *ngIf="currentUser$ | async as currentUser"  [class.chat--empty]="!user">
   <ng-container *ngIf="user; else empty">
     <div class="chat__user">
       {{ user.displayName }}
-      <mat-divider></mat-divider>
+      <mat-divider class="mt-5"></mat-divider>
     </div>
+    <mat-list *ngIf="!loader" class="chat__messages scrollbar">
+      <mat-list-item class="chat__message" [class.chat__message--outcome]="message.outcome" *ngFor="let message of messages">
+        <img class="chat__message__img" [class.chat__message__img--outome]="message.outcome" matListAvatar [src]="message.outcome ? currentUser.photoURL : user.photoURL" alt="Image">
+        {{ message.message }}
+      </mat-list-item>
+    </mat-list>
+    <app-loader *ngIf="loader"></app-loader>
     <app-textbox (sendMessage)="onSendMessage($event)"></app-textbox>
   </ng-container>
   <ng-template #empty>
