--- a/src/app/dashboard/chat/chat.component.scss
+++ b/src/app/dashboard/chat/chat.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: #fff;
   border-radius: 4px;
-  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+  box-shadow: $box-shadow;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -32,6 +32,45 @@
     margin-top: 10px;
     text-align: center;
     width: 90%;
+  }
+
+  &__messages {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin: 5px 0;
+    overflow-y: auto;
+    width: 100%;
+  }
+
+  &__message {
+    background: #F2F6F9;
+    border-radius: 10px;
+    color: #323232;
+    display: flex !important;
+    font-size: 0.9em;
+    height: auto !important;
+    margin: 10px;
+    padding: 10px 0 !important;
+    width: 75% !important;
+
+    &__img {
+      box-shadow: $box-shadow;
+      margin-right: 5px;
+
+      &--outome {
+        margin-left: 5px;
+        margin-right: 0;
+        order: 1;
+      }
+    }
+
+    &--outcome {
+      align-self: flex-end;
+      background: $light-blue;
+      justify-content: flex-end;
+    }
+
   }
 
   app-textbox {
