--- a/src/app/dashboard/user-actions/components/friends/friends.component.scss
+++ b/src/app/dashboard/user-actions/components/friends/friends.component.scss
@@ -10,6 +10,7 @@
     &__item {
       transition: .3s;
 
+      &--selected,
       &:hover {
         background: darken($grey, 5);
         cursor: pointer;
