create messages component

--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -4,7 +4,8 @@
       {{ user.displayName }}
       <mat-divider class="mt-5"></mat-divider>
     </div>
-    <ng-scrollbar *ngIf="!loader" visibility="always" viewClass="scroll-y" (updated)="onScrollbarUpdate()">
+    <app-messages *ngIf="!loader" [messages]="messages" [currentUser$]="currentUser$" [userPhotoUrl]="user.photoURL"></app-messages>
+    <!-- <ng-scrollbar *ngIf="!loader" visibility="always" viewClass="scroll-y" (updated)="onScrollbarUpdate()">
       <mat-list class="chat__messages">
         <mat-list-item class="chat__message" [class.chat__message--outcome]="message.outcome" *ngFor="let message of messages">
           <img class="chat__message__img" [class.chat__message__img--outome]="message.outcome" matListAvatar [src]="message.outcome ? currentUser.photoURL : user.photoURL" alt="Image">
@@ -16,7 +17,7 @@
           </p>
         </mat-list-item>
       </mat-list>
-    </ng-scrollbar>
+    </ng-scrollbar> -->
     <app-loader *ngIf="loader"></app-loader>
     <app-textbox (sendMessage)="onSendMessage($event)"></app-textbox>
   </ng-container>
