--- a/src/app/dashboard/chat/chat.component.scss
+++ b/src/app/dashboard/chat/chat.component.scss
@@ -69,6 +69,11 @@
 
   }
 
+  app-messages {
+    height: 100%;
+    width: 100%;
+  }
+
   app-textbox {
     margin-bottom: 10px;
     width: 90%;
